# peekr

./: .gitignore  README.md  pyproject.toml
peekr/: anomalies.py  cli.py  core.py  plotting.py  render.py  stats.py
peekr/readers/: __init__.py  csv_reader.py  fits_reader.py  h5_reader.py  npy_reader.py  npz_reader.py  parquet_reader.py
tests/: conftest.py  test_anomalies.py  test_cli.py  test_core.py  test_readers.py  test_render.py  test_stats.py
