[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "peekr"
version = "0.1.0"
description = "Universal scientific data file explorer for the command line"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "Nikhil Cherry" }]
dependencies = [
    "numpy",
    "rich",
]

[project.optional-dependencies]
fits = ["astropy"]
csv = ["pandas"]
parquet = ["pandas", "pyarrow"]
h5 = ["h5py"]
plot = ["matplotlib"]
all = ["astropy", "pandas", "pyarrow", "h5py", "matplotlib"]
dev = ["pytest"]

[project.scripts]
peekr = "peekr.cli:main"

[tool.setuptools.packages.find]
include = ["peekr*"]
